deployment/istio/ecommerce-app-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ecommerce-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecommerce-app
spec:
  hosts:
    - "*"
  gateways:
    - ecommerce-app-gateway
  http:
    - match:
        - uri:
            prefix: /api/orders
      route:
        - destination:
            host: order-service
    - match:
        - uri:
            prefix: /api/products
      route:
        - destination:
            host: inventory-service
    - route:
        - destination:
            host: ecommerce-frontend-service
---
